[package]
name = "prime_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primes = "0.3.0"
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.19"
